# ai-tools

./: .gitignore  1  Dockerfile  app.py  generate_research_engine_docs.py  mcp_server.py  pyproject.toml  requirements.txt
research_cache/: cache_manager.py
research_config/: db.py  providers.py  routes.py
research_documentation/: __init__.py  engine.py  registries.py
research_engine/: base_provider.py  deduplicator.py  error_classifier.py  fusion_engine.py  merge_strategies.py  metrics.py  provider_capabilities.py  provider_manager.py  provider_priorities.py  provider_registry.py  provider_result.py  publication_identity.py  query_cache.py  query_planner.py  ranking.py  rate_limiter.py  search_engine.py  search_executor.py  search_executor_pool.py  search_models.py
research_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
research_models/: converters.py  field_value.py  provider_value.py  publication.py
tests/: test_analysis_pipeline.py  test_deduplicator.py  test_dependency_analyzer_smoke.py  test_documentation_engine.py  test_end_to_end_pipeline.py  test_error_classifier_http_status.py  test_fusion_engine.py  test_metrics.py  test_provider_results.py  test_publication_serialization.py  test_python_package_extraction.py  test_query_cache.py  test_rate_limiter.py  test_registry.py  test_retry_after.py  test_search_engine.py  test_search_engine_fusion.py  test_search_executor_concurrency.py  test_search_executor_pool.py  test_search_executor_retries.py  test_search_executor_timeouts.py  test_software_package_model.py
tools/: arxiv_tool.py  health_tool.py  (+11 more)
(+64 files in other folders)
